# Automate-Essay-Scoring

./: .gitignore  EDA.ipynb  README.md  REPORT.md  pyproject.toml
src/config/: config.py
src/data/: load_data.py  preprocess.py
src/models/exp_1_baseline/: ridge.pkl  vectorize.pkl
src/notebooks/: EDA.ipynb
src/submission/exp_1_basline/: submission.csv
src/training/: baseline.py  bert.py  pooling.py
src/utils/: contractions.py  kappa.py  plots.py  seed.py  timeit.py
